--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		
 		<header>
 				<div id="headerName">
-					Fuseina
+					Fuseina YEs
 				</div>
 				<nav>
 					<a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
